feat(ess):[TRI-1046] Provide global asset ids in notification